--- a/src/app/view/login/login.component.html
+++ b/src/app/view/login/login.component.html
@@ -117,3 +117,7 @@
     </div>
   </div>
 </div>
+
+<ng-container *ngIf="loader.loading$ | async">
+  <app-global-loader></app-global-loader>
+</ng-container>
