--- a/src/app/view/ventas/generar-venta/generar-venta.component.scss
+++ b/src/app/view/ventas/generar-venta/generar-venta.component.scss
@@ -1335,6 +1335,72 @@
     margin-top: 2rem;
     padding-top: 1.5rem;
     border-top: 1px solid #e9ecef;
+
+    .section-header {
+        display: flex;
+        justify-content: space-between;
+        align-items: flex-start;
+        margin-bottom: 1.5rem;
+
+        .section-label-container {
+            .section-label {
+                font-weight: 600;
+                color: #495057;
+                display: flex;
+                align-items: center;
+                gap: 0.5rem;
+                margin: 0;
+                font-size: 1.1rem;
+
+                i {
+                    font-size: 1.2rem;
+                    color: var(--primary-color);
+                }
+            }
+
+            .section-description {
+                display: block;
+                color: #6c757d;
+                font-size: 0.875rem;
+                margin-top: 0.25rem;
+            }
+        }
+    }
+
+}
+
+.productos-table-container {
+    .section-header {
+        display: flex;
+        justify-content: space-between;
+        align-items: flex-start;
+        margin-top: 1rem;
+        margin-bottom: -0.9rem;
+
+        .section-label-container {
+            .section-label {
+                font-weight: 600;
+                color: #495057;
+                display: flex;
+                align-items: center;
+                gap: 0.5rem;
+                margin: 0;
+                font-size: 1.1rem;
+
+                i {
+                    font-size: 1.2rem;
+                    color: var(--primary-color);
+                }
+            }
+
+            .section-description {
+                display: block;
+                color: #6c757d;
+                font-size: 0.875rem;
+                margin-top: 0.25rem;
+            }
+        }
+    }
 }
 
 .section-header {
@@ -1487,6 +1553,10 @@
     display: flex;
     flex-direction: column;
     gap: 1rem;
+
+    .modern-input {
+        margin-bottom: 0rem !important;
+    }
 }
 
 .campo-adicional,
